--- a/src/components/Tab/Tab.less
+++ b/src/components/Tab/Tab.less
@@ -13,11 +13,13 @@
       font-size: 28px;
       color: #333;
       height: 100%;
+      text-align: center;
       &.active {
         color: #f35b1f
       }
       .tab-content {
         text-align: center;
+        display: inline-block;
       }
     }
   }
