--- a/src/components/animateList/animateList.less
+++ b/src/components/animateList/animateList.less
@@ -18,13 +18,14 @@
   }
   &__cover {
     // width: 20vmin;
-    background: url('../../assets//img/notitle.png')no-repeat center;
+    background: url('../../assets//img/notitle.png')no-repeat left top;
     background-size: cover;
     overflow: hidden;
     img.ignore {
       // width: 100%
       width: 75px;
-      height: 100px;
+      height: 100%;
+      min-height: 100px;
     }
   }
   &__info {
